Globify backend project